force-app/main/default/objects/Async_Config__mdt/Async_Config__mdt.object-meta.xml
<CustomObject>
    <label>Async Config</label>
    <pluralLabel>Async Config</pluralLabel>
</CustomObject>