force-app/main/default/objects/Async_Config__mdt/fields/QueueLimit__c.field-meta.xml
<CustomField>
    <fullName>QueueLimit__c</fullName>
    <label>QueueLimit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>