force-app/main/default/objects/Async_Config__mdt/fields/SyncLimit__c.field-meta.xml
<CustomField>
    <fullName>SyncLimit__c</fullName>
    <label>SyncLimit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>